<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail_page">

    <ImageView
        android:id="@+id/some_id"
        android:layout_width="428dp"
        android:layout_height="403dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="-96dp"
        android:background="@drawable/some"
        android:src="@drawable/matt" />


    <View
        android:id="@+id/love_ex"
        android:layout_width="64dp"
        android:layout_height="92dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="199dp"
        android:background="@drawable/ic_baseline_close_24" />

    <View
        android:id="@+id/love_circle"
        android:layout_width="64dp"
        android:layout_height="92dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="154dp"
        android:layout_marginTop="206dp"
        android:background="@drawable/ic_baseline_favorite_24" />

    <View
        android:id="@+id/star_rate"
        android:layout_width="69dp"
        android:layout_height="99dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="318dp"
        android:layout_marginTop="197dp"
        android:background="@drawable/ic_baseline_star_24"
        android:clipToOutline="true" />

    <TextView
        android:id="@+id/mart_develo"
        android:layout_width="232dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="301dp"
        android:fontFamily="@font/cake"
        android:gravity="top"
        android:text="@string/mart_develo"
        android:textAppearance="@style/mart_develo" />

    <TextView
        android:id="@+id/date"
        android:layout_width="232dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="137dp"
        android:layout_marginTop="301dp"
        android:fontFamily="@font/cake"
        android:gravity="top"
        android:text="@string/twentyfour"
        android:textAppearance="@style/twentyfour" />

    <View
        android:id="@+id/locate"
        android:layout_width="20dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="324dp"
        android:background="@drawable/ic_baseline_favorite_24" />

    <TextView
        android:id="@+id/nairobi_ken"
        android:layout_width="163dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="321dp"
        android:fontFamily="@font/cake"
        android:gravity="top"
        android:text="@string/nairobi_ken"
        android:textAppearance="@style/nairobi_ken" />

    <TextView
        android:id="@+id/about_me"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="351dp"
        android:gravity="top"
        android:text="@string/about_me"
        android:textAppearance="@style/about_me" />

    <TextView
        android:id="@+id/am_a_softwa"
        android:layout_width="383dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="387dp"
        android:gravity="top"
        android:text="@string/am_a_softwa"
        android:textAppearance="@style/am_a_softwa" />

    <TextView
        android:id="@+id/interest"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="454dp"
        android:gravity="top"
        android:text="@string/interest"
        android:textAppearance="@style/about_me" />

    <Button
        android:id="@+id/rectangle_25"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="151dp"
        android:layout_marginTop="571dp"
        android:background="@drawable/rectangle_14"
        android:text="@string/reading" />

    <TextView
        android:id="@+id/reading"
        android:layout_width="83dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="154dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="797dp"
        android:text="@string/reading"
        android:textAppearance="@style/reading"
        android:gravity="top"
        />


    <Button
        android:id="@+id/rectangle_20"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="284dp"
        android:layout_marginTop="579dp"
        android:background="@drawable/rectangle_14"
        android:text="@string/design" />

    <Button
        android:id="@+id/rectangle_22"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="282dp"
        android:layout_marginTop="518dp"
        android:background="@drawable/rectangle_14"
        android:text="@string/reading" />

    <Button
        android:id="@+id/rectangle_23"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="514dp"
        android:background="@drawable/rectangle_14"
        android:text="@string/development" />

    <Button
        android:id="@+id/rectangle_24"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="515dp"
        android:background="@drawable/rectangle_14"
        android:text="@string/photography" />

    <Button
        android:id="@+id/rectangle_25"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="572dp"
        android:background="@drawable/rectangle_14"
        android:text="@string/movie" />
</RelativeLayout>